remove workflow name as parameter in action.yml

--- a/action.yml
+++ b/action.yml
@@ -18,10 +18,6 @@ inputs:
     description: "Seconds to wait between Checks API requests"
     required: false
     default: "10"
-  running-workflow-name:
-    description: "Workflow that is waiting for the others"
-    required: false
-    default: ${{ github.action }}
 runs:
   using: "docker"
   image: "Dockerfile"
@@ -30,7 +26,7 @@ runs:
     - ${{ inputs.check-name }}
     - ${{ inputs.repo-token }}
     - ${{ inputs.wait-interval }}
-    - ${{ inputs.running-workflow-name }}
+    - ${{ github.action }}
 branding:
   icon: "check-circle"
   color: "green"
