--- a/.github/workflows/wait_for_it.yml
+++ b/.github/workflows/wait_for_it.yml
@@ -2,7 +2,8 @@ name: Wait for it
 on:
   push:
     branches:
-      - "*"
+      - master
+      - feature/select-branches-to-wait-with-regex
 
 jobs:
   deploy:
