--- a/.github/workflows/simple-task-test.yml
+++ b/.github/workflows/simple-task-test.yml
@@ -1,26 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Simple Task "simple-task-test"
 
-# Controls when the action will run. 
 on:
   push:
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   simple-task-test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: success!
