--- a/.github/workflows/wait_using_check-regexp.yml
+++ b/.github/workflows/wait_using_check-regexp.yml
@@ -2,7 +2,7 @@ name: Wait using check-regexp
 on:
   push:
     tags:
-      - 'test/v*' # e.g. test/v1_2_3
+      - 'test-using-regexp/v*' # e.g. test-using-regexp/v1_2_3
 jobs:
   wait-for-check-regexp:
     runs-on: ubuntu-latest
