--- a/.github/workflows/simple-task-test.yml
+++ b/.github/workflows/simple-task-test.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script
-        run: success!
+        run: echo 'success!'
