Second try to fix RANDOM: parameter not set

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Trigger wait_omitting-check-name workflow
         run: |
+          random_num=$((RANDOM))
           chmod +x ./.github/trigger-scripts/push-tag-trigger.sh
-          ./.github/trigger-scripts/push-tag-trigger.sh "test-omitting-check-name/v"
+          ./.github/trigger-scripts/push-tag-trigger.sh "test-omitting-check-name/v" $random_num
