--- a/.github/workflows/wait_using_check-regexp.yml
+++ b/.github/workflows/wait_using_check-regexp.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
         
       - name: Wait on tests
         uses: ./
