Keep tags and delete them after test execution

--- a/.github/workflows/wait_omitting-check-name.yml
+++ b/.github/workflows/wait_omitting-check-name.yml
@@ -19,5 +19,9 @@ jobs:
           wait-interval: 10 # seconds
           running-workflow-name: wait-omitting-check-name
 
+      - name: Delete tag
+        run: git push --delete origin ${{ github.ref }}
+        if: contains(github.ref, "test-omitting-check-name")
+
       - name: Success
         run: echo 'success!'
