Use single-quotes for string literal

--- a/.github/workflows/wait_omitting-check-name.yml
+++ b/.github/workflows/wait_omitting-check-name.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Delete tag
         run: git push --delete origin ${{ github.ref }}
-        if: ${{ contains(github.ref, "test-omitting-check-name") }}
+        if: ${{ contains(github.ref, 'test-omitting-check-name') }}
 
       - name: Success
         run: echo 'success!'
