Fix other workflows' conditionals

--- a/.github/workflows/wait_using_check-name.yml
+++ b/.github/workflows/wait_using_check-name.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Delete tag
         run: git push --delete origin ${{ github.ref }}
-        if: contains(github.ref, "test-using-check-name")
+        if: ${{ contains(github.ref, 'test-using-check-name') }}
 
       - name: Success
         run: echo 'success!'
