--- a/.github/workflows/simple_task.yml
+++ b/.github/workflows/simple_task.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
   workflow_dispatch:
+    inputs:
+      delay_seconds:
+        description: 'Time to delay'
+        required: false
+        default: 60
 
 jobs:
   simple-task:
@@ -11,8 +16,10 @@ jobs:
 
     steps:
       - name: delay execution if manually executed
-        run: sleep 1m
-        if: ${{ github.event == 'workflow_dispatch' }}
+        env:
+          input_delay: ${{ github.event.inputs.delay_seconds }}
+        run: sleep $input_delay
+        if: ${{ github.event_name == 'workflow_dispatch' }}
 
       - name: Run a one-line script
         run: echo 'done'
