--- a/.github/workflows/simple-task-test.yml
+++ b/.github/workflows/simple-task-test.yml
@@ -7,6 +7,11 @@ on:
     branches:
     tags:
   workflow_dispatch:
+    inputs:
+      delay_seconds:
+        description: 'Time to delay'
+        required: false
+        default: 60
 
 jobs:
   simple-task-test:
@@ -15,7 +20,7 @@ jobs:
     steps:
       - name: delay execution if manually executed
         run: sleep 1m
-        if: ${{ github.event == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
 
       - name: Run a one-line script
         run: echo 'done'
