--- a/.github/workflows/wait_using_check-name.yml
+++ b/.github/workflows/wait_using_check-name.yml
@@ -1,5 +1,7 @@
 name: Wait using check-name
 on:
+  pull_request:
+    types: [opened, synchronize]
   push:
     tags:
       - 'test-using-check-name/v*' # e.g. test-using-check-name/v1_2_3
