--- a/.github/workflows/wait-on-me.yml
+++ b/.github/workflows/wait-on-me.yml
@@ -1,18 +1,17 @@
 name: Workflow to wait on
 on:
-  pull_request:
-    types: [opened, synchronize]
   workflow_dispatch:
     inputs:
       delay_seconds:
-        description: 'Time to delay'
+        description: "Time to delay"
         required: false
         default: "120"
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   wait-on-me:
     runs-on: ubuntu-latest
-
     steps:
       - name: Do some busywork
         env:
@@ -21,6 +20,5 @@ jobs:
         run: |
           [ "$input_delay" ] && sleep_for="$input_delay" || sleep_for="$default_delay"
           sleep $sleep_for
-
       - name: Report success
         run: echo 'Done with busywork'
