[WIP] Revisioning testing strategy  (#17)
* Add activesupport gem

* Make service configurable (using Configurable module from ActiveSupport)

* Add regexp filter

* Remove duplicated file (entrypoint_spec)

* Fix tests

* Reduce wait time in spec

* Add regexp test workflow and add input to action.yml

* Fix simple-task-test

* Forgotten change in last commit

* Remove params in service call

* Add bundle steps in dockerfile

* Fix dockerfile

* Trigger test workflows when PR is open/syncronized

* Use commit reference to wait instead of github.ref, since this last one can make the checks fail based on previous executions

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* debug

* debug

Co-authored-by: Matias <m.albarello@buddyandselly.com>

--- a/.github/workflows/wait_omitting-check-name.yml
+++ b/.github/workflows/wait_omitting-check-name.yml
@@ -1,5 +1,7 @@
 name: Wait omitting check-name
 on:
+  pull_request:
+    types: [opened, synchronize]
   push:
     tags:
       - 'test-omitting-check-name/v*' # e.g. test-omitting-check-name/v1_2_3
@@ -16,7 +18,7 @@ jobs:
       - name: Wait on tests
         uses: ./
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.sha }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10 # seconds
           running-workflow-name: wait-omitting-check-name
