rename to rspec

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -1,12 +1,8 @@
-name: RSpec tests
+name: RSpec
 on:
   push:
     paths-ignore:
       - 'README.md'
-  pull_request:
-    paths-ignore:
-      - 'README.md'
-
   workflow_dispatch:
 
 jobs:
