--- a/.github/workflows/standardrb-linter.yml
+++ b/.github/workflows/standardrb-linter.yml
@@ -6,7 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: standardrb
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: amoeba/standardrb-action@v2
+    - uses: actions/checkout@v1
+    - name: StandardRB Linter
+      uses: andrewmcodes/standardrb-action@v0.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        RUBY_VERSION: 2.7
