--- a/.github/workflows/wait-using-mac-hosted-runner.yml
+++ b/.github/workflows/wait-using-mac-hosted-runner.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   wait-on-mac:
-    runs-on: mac-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Wait on tests
