Fix typo and try running entrypoint

--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,9 @@ runs:
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - run: ruby ${{ github.action_path }}/entrypoint.rb
+    - run: |
+        cd ${{ github.action_path }}
+        ruby ./entrypoint.rb
       shell: bash
       env:
         ALLOWED_CONCLUSIONS: ${{ inputs.allowed-conclusions }}
