--- a/action.yml
+++ b/action.yml
@@ -42,9 +42,7 @@ runs:
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - run: |
-        cd ${{ github.action_path }}
-        ruby ./entrypoint.rb
+    - run: ruby entrypoint.rb
       shell: bash
       env:
         ALLOWED_CONCLUSIONS: ${{ inputs.allowed-conclusions }}
