--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ runs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - run: bundle install
     - run: ruby entrypoint.rb
       shell: bash
       env:
