--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
-          with:
-          ruby-version: 2.7
-          bundler-cache: true
+
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
 
       - name: Install dependencies
         run: bundle install
