--- a/.github/workflows/delete-release.yml
+++ b/.github/workflows/delete-release.yml
@@ -2,7 +2,7 @@ name: Delete Release
 on:
   workflow_dispatch:  # manually run
     inputs:
-      release_version:
+      RELEASE_VERSION:
         description: 'Set the version of the tag/release to be removed'
         required: true
 jobs:
