--- a/action.yml
+++ b/action.yml
@@ -41,9 +41,10 @@ runs:
     - uses: ruby/setup-ruby@v1.81.0
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
-        bundler-cache: true
-        working-directory: ./lewagon_wait-on-check-action
-    - run: ruby ${{ github.action_path }}/entrypoint.rb
+    - run: |
+        cd ${{ github.action_path }}
+        bundle install
+        ruby entrypoint.rb
       shell: bash
       env:
         ALLOWED_CONCLUSIONS: ${{ inputs.allowed-conclusions }}
