--- a/action.yml
+++ b/action.yml
@@ -53,6 +53,7 @@ runs:
       run: |
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
+      shell: bash
 
     - run: ruby entrypoint.rb
       shell: bash
