--- a/action.yml
+++ b/action.yml
@@ -41,21 +41,15 @@ runs:
     - uses: ruby/setup-ruby@v1.81.0
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
-    - name: Cache Ruby Gems
-      uses: actions/cache@v2
-      with:
-        path: ${{ github.action_path }}
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
 
     - name: Bundle Install
       run: |
-        bundle config path ${{ github.action_path }}
         bundle install --jobs 4 --retry 3
-      shell: bash
+        working-directory: ${{ github.action_path }}
 
-    - run: ruby entrypoint.rb
+    - run: |
+        ruby entrypoint.rb
+        working-directory: ${{ github.action_path }}
       shell: bash
       env:
         ALLOWED_CONCLUSIONS: ${{ inputs.allowed-conclusions }}
