--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,7 @@ runs:
       run: |
         bundle install --jobs 4 --retry 3
         working-directory: ${{ github.action_path }}
+      shell: bash
 
     - run: |
         ruby entrypoint.rb
