--- a/action.yml
+++ b/action.yml
@@ -41,12 +41,13 @@ runs:
     - uses: ruby/setup-ruby@v1.81.0
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
+        bundler-cache: true
 
-    - name: Bundle Install
-      run: |
-        bundle install --jobs 4 --retry 3
-      working-directory: ${{ github.action_path }}
-      shell: bash
+    # - name: Bundle Install
+    #   run: |
+    #     bundle install --jobs 4 --retry 3
+    #   working-directory: ${{ github.action_path }}
+    #   shell: bash
 
     - run: |
         ruby entrypoint.rb
