--- a/action.yml
+++ b/action.yml
@@ -41,14 +41,19 @@ runs:
     - uses: ruby/setup-ruby@v1.81.0
       with:
         ruby-version: 2.7 # Not needed with a .ruby-version file
-        bundler-cache: true
-      working-directory: ${{ github.action_path }}
 
-    # - name: Bundle Install
-    #   run: |
-    #     bundle install --jobs 4 --retry 3
-    #   working-directory: ${{ github.action_path }}
-    #   shell: bash
+    - name: Cache Ruby Gems
+      uses: actions/cache@v2
+      with:
+        path: ${{ github.action_path }}
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: ${{ runner.os }}-gems-
+
+    - name: Bundle Install
+      run: |
+        bundle install --jobs 4 --retry 3
+      working-directory: ${{ github.action_path }}
+      shell: bash
 
     - run: |
         ruby entrypoint.rb
