Use secrets.GITHUB_TOKEN by default as repo-token
This will truly make repo-token optional.

--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ inputs:
   repo-token:
     description: "A GitHub token for the repo"
     required: false
-    default: ""
+    default: "${{ secrets.GITHUB_TOKEN }}"
   wait-interval:
     description: "Seconds to wait between Checks API requests"
     required: false
