--- a/.github/workflows/standardrb-linter.yml
+++ b/.github/workflows/standardrb-linter.yml
@@ -1,14 +1,24 @@
 name: StandardRB
 
-on: [push]
+on:
+  push:
+
+permissions:
+  checks: write
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: StandardRB Linter
-      uses: andrewmcodes/standardrb-action@v0.0.2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        RUBY_VERSION: 2.7
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2'
+          bundler-cache: true
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: standardrb
+        env:
+          RUBY_VERSION: '3.2'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: amoeba/standardrb-action@v2
