pin bundler version

--- a/action.yml
+++ b/action.yml
@@ -45,6 +45,7 @@ runs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.2 # Not needed with a .ruby-version file
+        bundler: 2.4.22
 
     - name: Cache Ruby Gems
       uses: actions/cache@v3
