Fix spelling mistakes and add frozen_string_literal comments

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 # action.yml
 name: "Wait on check"
-author: "progapandist"
+author: "lewagon"
 description: "Wait on a certain check to pass for commit"
 inputs:
   allowed-conclusions:
