--- a/action.yml
+++ b/action.yml
@@ -55,6 +55,7 @@ runs:
         ruby-version: 3.2
         bundler-cache: true
       env:
+        BUNDLE_PATH: "vendor/bundle"
         BUNDLE_WITHOUT: "development"
 
     - run: |
