--- a/action.yml
+++ b/action.yml
@@ -46,26 +46,18 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ruby/setup-ruby@v1
+    - name: Checkout the source code
+      uses: actions/checkout@v4
+
+    - name: Set the ruby version
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.2 # Not needed with a .ruby-version file
+        ruby-version: 3.2
+        bundler-cache: true
+      env:
+        BUNDLE_PATH: "vendor/bundle"
 
-    - name: Cache Ruby Gems
-      uses: actions/cache@v4
-      with:
-        path: ${{ github.action_path }}
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: ${{ runner.os }}-gems-
-
-    - name: Bundle Install
-      run: |
-        bundle install --jobs 4 --retry 3
-      working-directory: ${{ github.action_path }}
-      shell: bash
-
-    - run: |
-        ruby entrypoint.rb
-      working-directory: ${{ github.action_path }}
+    - run: bundle exec entrypoint.rb
       shell: bash
       env:
         ALLOWED_CONCLUSIONS: ${{ inputs.allowed-conclusions }}
@@ -78,6 +70,7 @@ runs:
         WAIT_INTERVAL: ${{ inputs.wait-interval }}
         RUNNING_WORKFLOW_NAME: ${{ inputs.running-workflow-name }}
         API_ENDPOINT: ${{ inputs.api-endpoint }}
+
 branding:
   icon: "check-circle"
   color: "green"
