Fix bump2version selectors

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,5 +4,5 @@ commit = True
 current_version = 1.3.4
 
 [bumpversion:file:README.md]
-search = "@v{current_version}"
-replace = "@v{new_version}"
+search = @v{current_version}
+replace = @v{new_version}
